# staticObjectDetectionGUI

./: CMakeLists.txt  CMakeLists.txt.user.34d023b  CamPreview.qml  README.md  VideoSourceChooser.qml  VideoSourceChooserForm.ui.qml  campreviewhandler.cpp  campreviewhandler.h  main.cpp  main.qml  matimageprovider.cpp  matimageprovider.h  qtquickcontrols2.conf  resources.qrc  worker.cpp  worker.h
